Added CSS outline for dropdown

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -21,6 +21,14 @@ input {
 nav a*/
 
 /*------------------------------------------------------------------*\
+    #Dropdown
+\*------------------------------------------------------------------*/
+.dropdown-container
+
+.dropdown
+
+
+/*------------------------------------------------------------------*\
     #Content
 \*------------------------------------------------------------------*/
 
