--- a/CSS/style.css
+++ b/CSS/style.css
@@ -103,6 +103,7 @@ nav a:active {
 	padding-bottom: 5px; /*?*/
 	position: relative;
 	display: inline-block;
+	z-index: 100; /*this is to make sure the dropdown menus appear in front of the carousel*/
 }
 
 .dropdown-container:hover .dropdown {
