Changed centering of header
updated the header to span across whole window while maintaining the
960px “grid” system

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,6 @@
 body {
 	background-color: #F9F3F3;
+	background-image: url('../Images/subtle_surface_champagne.png');
 	font-family: 'Lora', serif;
 }
 
@@ -8,14 +9,14 @@ body {
 \*------------------------------------------------------------------*/
 
 header {
-	/* */
 	margin: 0px auto;
-	width: 960px;
+	width: 100%;
 }
 
 #header-top {
 	height: 70px;
-	background-image: url('../Images/dressracktop.png'); /*not working. why?*/
+	background-image: url('../Images/dressracktop.png');
+/*	background-repeat: no-repeat;*/
 }
 
 #logo {
@@ -47,8 +48,12 @@ input {
 nav {
 	background-color: #F24FA8;
 	display: inline-block;
+	padding: 0px auto;
 	text-align: right;
 	width: 100%; /*change to cover whole window?*/
+	-webkit-box-shadow: 0 8px 6px -6px #ccc;
+     -moz-box-shadow: 0 8px 6px -6px #ccc;
+          box-shadow: 0 8px 6px -6px #ccc;
 }
 
 nav a {
@@ -69,6 +74,11 @@ nav a:active {
 
 }
 
+.centered {
+	width: 960px;
+	margin: 0 auto;
+}
+
 /*------------------------------------------------------------------*\
     #Dropdown
 \*------------------------------------------------------------------*/
@@ -77,6 +87,8 @@ nav a:active {
 /* ADD SHADOW TO DROP DOWN BOXES*/
 .dropdown {
 	background-color: #F24FA8;
+	background-color: #DE4698;
+	opacity: .9;
 	border-bottom-left-radius: 5px;
 	border-bottom-right-radius: 5px;
 	display: none;
@@ -137,7 +149,7 @@ ul li:hover a {
 
 .flexslider {
 	height: 315px;
-	width: 940px;
+	width: 960px;
 	display: block;
 	margin: 20px auto 10px auto;
 	/*border: solid black 20px;
