--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,7 @@ nav a:active {
 	display: block;
 }
 
+/* nest these in dropdown class */
 ul li:hover {
 	background-color: white;
 	/*border-bottom-left-radius: 10px; Trying to fix hover corners
@@ -182,11 +183,24 @@ ul li:hover a {
 	margin: 0 auto;*/
 }
 
+.flexslider .slides li {
+	position: relative;
+}
+
+.flexslider .call-to-action {
+	border: 1px solid black;
+	position: absolute;
+	bottom: 30px;
+	left: 	100px;
+	float: left;
+}
+
 #welcome-blurb {
 	margin: 40px auto 20px auto; /*added 30px because flexslider dots overlapped*/
 	width: 100%;
 }
 
+/* may want to nest this selector in #welcome-blurb */
 h1 {
 	color: #42162E;
 	font-family: 'Playfair Display SC', serif;
@@ -215,6 +229,14 @@ h1 {
 	height: 180px;
 	margin-left: 1%;
 	width: 300px;
+	position: relative;
+}
+
+/* position absolute to place text above an image */
+.features p {
+	position: absolute;
+	bottom: 30px;
+	right: 30px;
 }
 
 .features img {
